feat: Player의 멤버 변수에 bettingAmount 추가