@@ -4,10 +4,11 @@ import domain.BlackJackGame;
 import domain.GameResult;
 import domain.card.cardsGenerator.RandomCardsGenerator;
 import domain.participant.Dealer;
+import domain.participant.Money;
 import domain.participant.Player;
-import domain.participant.Players;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import view.InputView;
 import view.OutputView;
 
@@ -24,7 +25,7 @@ public class BlackJackController {
     public void run() {
         try {
             BlackJackGame game = startGame();
-            printInitialParticipantsHand(game);
+            outputView.printParticipantsHand(game);
 
             drawCards(game);
             drawDealerCards(game);
@@ -37,19 +38,16 @@ public class BlackJackController {
 
     private BlackJackGame startGame() {
         Dealer dealer = Dealer.init(new RandomCardsGenerator());
-        Players players = createPlayers();
-        return BlackJackGame.init(dealer, players);
+        List<String> playerNames = inputView.readPlayerNames();
+        List<Money> monies = readBettingAmounts(playerNames);
+
+        return BlackJackGame.init(dealer, playerNames, monies);
     }
 
-    private Players createPlayers() {
-        List<Player> players = inputView.readPlayerNames()
-                .stream()
-                .map(Player::init).toList();
-        return new Players(players);
-    }
-
-    private void printInitialParticipantsHand(BlackJackGame game) {
-        outputView.printParticipantsHand(game);
+    private List<Money> readBettingAmounts(List<String> playerNames) {
+        return playerNames.stream()
+                .map(name -> new Money(inputView.readBettingAmount(name)))
+                .collect(Collectors.toList());
     }
 
     private void drawCards(BlackJackGame game) {
